--- a/start-page/src/css/style.css
+++ b/start-page/src/css/style.css
@@ -36,6 +36,13 @@ body {
   top: 0;
   z-index: 5;
 }
+.header-current {
+  position: fixed;
+  left: 45%;
+  top: 1rem;
+  font-size: var(--font2);
+  color: var(--gold);
+}
 .burger {
   position: fixed;
   left: 0.5rem;
@@ -143,10 +150,7 @@ body {
   /*display: none;*/
 }
 
-.home-intro,
-.home-textbook,
-.home-games,
-.home-statistics {  
+.home-article {  
   height: 11rem;
   width: 80%;
   margin: 2rem auto;
@@ -160,17 +164,16 @@ body {
 }
 .home-article:nth-child(odd) {
   background-position: 100% 0%;
-  border-radius: 0rem 2rem 2rem 0rem;
+  border-radius: 0rem 2rem 2rem 2rem;
   text-align: start;
 }
 .home-article:nth-child(even) {
   background-position: 0% 100%;
-  border-radius: 2rem 0rem 0rem 2rem;
+  border-radius: 2rem 2rem 0rem 2rem;
   text-align: end;
 }
 .home-intro.home-article {
-  background-image: url('../assets/img/intro.jpg');
-  background-position: 100% 0%;      
+  background-image: url('../assets/img/intro.jpg');        
 }
 .home-textbook {
   background-image: url('../assets/img/textbook.jpg');    
@@ -181,10 +184,16 @@ body {
 .home-statistics {
   background-image: url('../assets/img/statistics.png');  
 }
+.home-developers.home-article {
+  background-image: url('../assets/img/developer.png'); 
+  background-size: 11rem 11rem;
+  background-position: 93% 0%; 
+}
 .home-intro_title,
 .home-textbook_title,
 .home-games_title,
-.home-statistics_title {
+.home-statistics_title,
+.home-developers_title {
   font-size: 5rem;
   padding-top: 2.5rem;
   color: var(--border);
@@ -192,32 +201,39 @@ body {
 .home-intro_subtitle,
 .home-textbook_subtitle,
 .home-games_subtitle,
-.home-statistics_subtitle {
+.home-statistics_subtitle,
+.home-developers_subtitle {
   display: flex;  
   justify-content: center; 
   align-items: center;
   height: 9rem;
-  width: calc(96% - 16rem);
+  width: calc(97% - 16rem);
   background-color: rgba(0, 2, 3, 0.8);
   color: var(--grey);
   padding: 1rem 1rem;
   position: absolute;
   left: 0rem;
   top: 0rem;
-  font-size: var(--font4);
-  
+  font-size: var(--font4);  
   visibility: hidden;
   opacity: 0;
   transition: all 1s ease-in-out;
 }
 .home-intro_subtitle,
-.home-games_subtitle {
+.home-games_subtitle,
+.home-developers_subtitle {
   left: 16rem;  
+  border-radius: 0 0 0 2rem;
+}
+.home-textbook_subtitle,
+.home-statistics_subtitle {
+  border-radius: 0 2rem 0 0;
 }
 .home-intro:hover .home-intro_subtitle,
 .home-textbook:hover .home-textbook_subtitle,
 .home-games:hover .home-games_subtitle,
-.home-statistics:hover .home-statistics_subtitle {   
+.home-statistics:hover .home-statistics_subtitle,
+.home-developers:hover .home-developers_subtitle {   
   visibility: visible;
   opacity: 1;
   transition: all 1s ease-in-out; 
@@ -258,7 +274,7 @@ body {
   min-height: 10.5rem;
   background-color: rgba(123, 171, 226, 0.733);
   margin: 1rem 0;
-  padding-left: 16.5rem;
+  padding: 0 0.7rem 0 16.5rem;
   border-radius: 2rem 2rem 0 2rem;
   background-repeat: no-repeat;
   background-position: 0% 0%;
@@ -272,7 +288,6 @@ body {
   left: 13rem;
   top: 0;
   background: linear-gradient(to right, var(--bg-transp), rgba(123, 171, 226, 1));
-
 }
 
 .textbook-word,
@@ -286,8 +301,20 @@ body {
   font-size: var(--font2);
   color: var(--border);
 }
+
 .textbook-word_transcription {
   color: var(--red);
+}
+
+.textbook-play {
+  width: 1.5rem;
+  height: 1.5rem;
+  border-radius: 50%;
+  background-color: var(--bg-transp);
+  background-image: url('../assets/img/audioplay_btn.png');
+  background-repeat: no-repeat;
+  background-size: 1.7rem;
+  background-position: center;  
 }
 
 .textbook-word_audio,
@@ -297,12 +324,14 @@ body {
   opacity: 0;
   font-size: 0.7rem;
 }
+
 .textbook-example,
 .textbook-meaning {
   color: var(--border);
   font-style: italic;
   font-weight: 700;
 }
+
 .textbook-btns_wrapper {
   display: flex;  
   justify-content: center;
@@ -319,6 +348,7 @@ body {
   background-position: center;
   transition: all 1s ease-in-out; 
 }
+
 .word-btn:hover {
   background-color: var(--blue);
   background-image: url('../assets/img/flag_GB.png');
@@ -331,6 +361,18 @@ body {
 .difficult-word {
   border-radius: 0 90% 0 0%;
 }
+
+/*---------------------STATISTICS-------------------*/
+
+.statistics{
+  width: 100%;
+  height: 85vh;
+  margin-top: 1rem;
+  background-color: var(--blue);
+  border-radius: 0 2rem 0 0;
+}
+
+
 /*---------------------ABOUT APP--------------------*/
 
 .developers {
