--- a/src/style.css
+++ b/src/style.css
@@ -1,2 +1,3 @@
 @import url('./css/reset.css');
-@import url('./css/miniGame.css');
+@import url('./css/sprintGame.css');
+@import url('./css/audioGame.css');
