--- a/src/css/audioGame.css
+++ b/src/css/audioGame.css
@@ -1,3 +1,13 @@
+body {
+  opacity: 0;
+  transition: 0.5s;
+}
+
+body.active {
+  opacity: 1;
+  transition: 0.5s;
+}
+
 .wrapper_audioGame {
   margin: 5rem auto;
   width: 90%;
@@ -5,6 +15,15 @@
   border: grey solid 1px;
   border-radius: 1rem;
   background-color: bisque;
+}
+
+button {
+  cursor: pointer;
+  appearance: none; 
+}
+
+button:disabled {
+  cursor: auto;
 }
 
 .word_block {
@@ -43,6 +62,28 @@
   transition: .5s;
 }
 
+.next_word_btn:disabled {
+  background-color: gray;
+  opacity: .5;
+  transition: .5s;
+}
+
+.next_word_btn {
+  background-color: transparent;
+  transition: .5s;
+}
+
+.btn_word_variant {
+  opacity: 1;
+}
+
+.btn_word_variant.block,
+#idk:disabled {
+  background-color: gray;
+  opacity: .5;
+  transition: .5s;
+}
+
 .audio_answer_variant.right {
   background-image: url('../assets/true2.svg');
   opacity: 1;
@@ -54,6 +95,28 @@
   opacity: 1;
   transition: .5s;
 }
+
+
+.hide_info {
+  opacity: 0;
+  transition: .5s;
+}
+
+.hide_info.active {
+  opacity: 1;
+  transition: .5s;
+}
+
+.audio_img {
+  width: 8rem;
+  height: 8rem;
+  border-radius: 4rem;  
+  transition: .5s;
+  background-position: center;
+  background-size: contain;  
+}
+
+
 
 
 
