--- a/src/css/sprintGame.css
+++ b/src/css/sprintGame.css
@@ -1,5 +1,5 @@
-body {
-  padding: 0 10% 0 10%;
+body.active {
+  overflow-y: hidden;
 }
 
 .wrapper_minigame {  
@@ -8,6 +8,12 @@ body {
   align-items: center; 
   flex-wrap: wrap;
   margin-top: 5rem;
+  transition: .5s;
+}
+
+.wrapper_minigame.block {
+  opacity: 0; 
+  transition: .5s;
 }
 
 #game_timer,
@@ -169,7 +175,40 @@ body {
   font-size: 1.5rem;
   text-align: center;
   vertical-align: middle;
-  background-color: bisque; 
-  
-  transition: .2;  
+  background-color: bisque;   
+  transition: .2s;  
 }
+
+.end_game { 
+  position: absolute; 
+  width:20rem;
+  height: 20rem;
+  top: calc(50% - 10rem);
+  left: calc(50% - 10rem);
+  transition: 1s;
+  font-size: 1.5rem;
+  text-align: center;
+  vertical-align: middle;
+  background-color: bisque;
+  border: grey solid 1px;
+  border-radius: 1rem;  
+  z-index: 200;
+}
+
+.wrapper_end_game {  
+  position: absolute;  
+  top: 120%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: .5s;
+}
+
+.wrapper_end_game.active {
+  top: 0;
+  left: 0;
+  transition: .5s;
+}
+
+
+
