--- a/src/css/audioGame.css
+++ b/src/css/audioGame.css
@@ -111,3 +111,67 @@ button:disabled {
   height: 5rem;
   border-radius: 2.5rem;
 }
+
+.end_audio_train {
+  position: absolute; 
+  width:20rem;
+  height: 20rem;
+  top: calc(50% - 10rem);
+  left: calc(50% - 10rem);
+  transition: 1s;
+  font-size: 1.5rem;
+  text-align: center;
+  vertical-align: middle;
+  background-color: bisque;
+  border: grey solid 1px;
+  border-radius: 1rem;  
+  z-index: 200;
+}
+
+.end_audio_train_wrapper {
+  display: none;  
+  position: absolute;  
+  top: 120%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: .5s;
+}
+
+.end_audio_train_wrapper.active {
+  display: block; 
+  top: 0;
+  left: 0;
+  transition: .5s;
+}
+
+#end_game_nextPage {
+  display: none;
+}
+
+#end_game_nextPage.active {
+  display: block;
+}
+
+.end_audio_info {
+  position: absolute; 
+  width:20rem;
+  height: 20rem;
+  top: calc(50% - 10rem);
+  left: calc(50% - 10rem);
+  transition: 1s;
+  font-size: 1.5rem;
+  text-align: center;
+  vertical-align: middle;
+  background-color: bisque;
+  border: grey solid 1px;
+  border-radius: 1rem;  
+  z-index: 400;
+  opacity: 0;
+}
+
+.end_audio_info.active {
+  display: block;
+  opacity: 1;
+  transition: 1s;
+}
