fix: change link to https and add some atributes of learned page to textbook

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -684,6 +684,9 @@ button {
   cursor: pointer;
   transition: all 0.7s;
 }
+#textbook-select._learned-page{
+  background-color: var(--gold);
+}
 #textbook-select::-webkit-scrollbar {
   display: none;
 }
