--- a/src/css/audioGame.css
+++ b/src/css/audioGame.css
@@ -1,11 +1,24 @@
 .wrapper_audioGame {
-  margin: 5rem auto;
-  width: 90%;
+  width: 100%; 
+  padding-top: 18vh; 
+}
+
+.audioGame_content {  
+  margin: 0 auto;
+  width: 60%;
+  height: 40vh;
   padding: 3% 3% 3% 3%;
   border: grey solid 1px;
   border-radius: 1rem;
-  background-color: bisque;
+  background-color: rgba(196, 196, 196, 0.7);
+  transition: .5s;
 }
+
+.wrapper_audioGame.block {
+  opacity: 0;
+  transition: .5s;
+}
+
 
 button {
   cursor: pointer;
@@ -20,16 +33,14 @@ button:disabled {
   display: flex;
   flex-wrap: nowrap;
   justify-content: center;
+  vertical-align: middle;
 }
 
 .word_variants {
   display: flex;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  position: relative;
-  margin: 5rem 0 5rem 0;
-  width: 20rem;
-  left: calc(50% - 10rem);
+  flex-wrap: wrap;
+  justify-content: center;  
+  margin: 5rem 0 5rem 0;  
 }
 
 .next_word {
@@ -38,9 +49,29 @@ button:disabled {
   justify-content: center;
 }
 
+.audio_answer {
+  width: 10rem;
+  height: 1.5rem;
+  background-color: rgba(255, 255, 255, .5);
+  font-size: 1.2rem;
+  text-align: center;
+  border-radius: .5rem;
+}
+
 .audio_answer_variant,
 .word_variant {
   display: inline-block;
+}
+
+
+.word_variant {
+  margin-top: .5rem;
+  margin-left: .5rem;
+}
+.btn_word_variant {    
+  width: 9rem;
+  font-size: 1rem;
+  border-radius: .5rem;  
 }
 
 .audio_answer_variant {
@@ -90,6 +121,7 @@ button:disabled {
 .hide_info {
   opacity: 0;
   transition: .5s;
+  text-align: center;
 }
 
 .hide_info.active {
@@ -102,14 +134,17 @@ button:disabled {
   height: 8rem;
   border-radius: 4rem;  
   transition: .5s;
+  display: inline-block;
   background-position: center;
   background-size: contain;  
 }
 
-.play_word {
-  width: 5rem;
-  height: 5rem;
-  border-radius: 2.5rem;
+#play_word {
+  display: block;
+  margin-left: 2rem;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 2rem;
 }
 
 .end_audio_train {
@@ -122,7 +157,7 @@ button:disabled {
   font-size: 1.5rem;
   text-align: center;
   vertical-align: middle;
-  background-color: bisque;
+  background-color: rgba(196, 196, 196, 0.7);;
   border: grey solid 1px;
   border-radius: 1rem;  
   z-index: 200;
@@ -154,6 +189,7 @@ button:disabled {
 }
 
 .end_audio_info {
+  display:none;
   position: absolute; 
   width:20rem;
   height: 20rem;
@@ -163,7 +199,7 @@ button:disabled {
   font-size: 1.5rem;
   text-align: center;
   vertical-align: middle;
-  background-color: bisque;
+  background-color: rgba(196, 196, 196, 0.7);;
   border: grey solid 1px;
   border-radius: 1rem;  
   z-index: 400;
