--- a/src/css/sprintGame.css
+++ b/src/css/sprintGame.css
@@ -1,13 +1,9 @@
-body.active {
-  overflow-y: hidden;
-}
-
 .sprint_minigame {  
   display:flex;
   justify-content: center;
   align-items: center; 
   flex-wrap: wrap;
-  margin-top: 5rem;
+  padding-top: 5rem;
   transition: .5s;
 }
 
@@ -28,7 +24,7 @@ body.active {
   padding: 3% 3% 3% 3%;
   border: grey solid 1px;
   border-radius: 1rem;
-  background-color: bisque;
+  background-color: rgba(255, 255, 255, .5);
 }
 
 .total_score,
@@ -171,11 +167,12 @@ body.active {
   left:80%;
   width: 3rem;
   height: 3rem;
-  border-radius: .5rem;
+  border-radius: 1.5rem;
+  padding-top: 1rem;
   font-size: 1.5rem;
   text-align: center;
   vertical-align: middle;
-  background-color: bisque;   
+  background-color: rgba(255, 255, 255, .5);   
   transition: .2s;  
 }
 
@@ -189,7 +186,7 @@ body.active {
   font-size: 1.5rem;
   text-align: center;
   vertical-align: middle;
-  background-color: bisque;
+  background-color: rgba(255, 255, 255, .5);
   border: grey solid 1px;
   border-radius: 1rem;  
   z-index: 200;
