feat: add game-page, statistic-page renders, add API for user-statistics (22:53 22.02.2022)

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
 @import url('./css/reset.css');
 @import url('./css/sprintGame.css');
 @import url('./css/audioGame.css');
+@import url('./css/chooseGame.css'); 
+@import url('./css/statistic.css'); 
